--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,25 @@
   <groupId>org.jboss.forge.jsr107</groupId>
   <artifactId>jsr107-plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  
   <properties>
     <forge.api.version>1.1.1.Final</forge.api.version>
   </properties>
+  
+  <build>
+      <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+  </build>
+  
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -35,13 +51,10 @@
         <version>${forge.api.version}</version>
         <scope>test</scope>
       </dependency>
-      <dependency>
-        <groupId>javax.cache</groupId>
-        <artifactId>cache-api</artifactId>
-        <version>0.5</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
+  
+  
   <dependencies>
     <dependency>
       <groupId>javax.enterprise</groupId>
@@ -68,15 +81,5 @@
       <artifactId>forge-shell</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>javax.cache</groupId>
-      <artifactId>cache-api</artifactId>
-    </dependency>
   </dependencies>
-  <repositories>
-    <repository>
-      <id>JBOSS_NEXUS</id>
-      <url>http://repository.jboss.org/nexus/content/groups/public</url>
-    </repository>
-  </repositories>
 </project>
